--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button {
+  position: relative;
+  overflow: hidden;
+  /* height: 3rem; */
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
+
+.button_content {
+  position: relative;
+  /* z-index: 1; */
+}
+
+.button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  width: 100%;
+  height: inherit;
+  border-radius: inherit;
+  background: linear-gradient(
+    -45deg,
+    oklch(71.33% 0.153 1) 0%,
+    oklch(95% 0.261 1) 100%
+  );
+  transition: all 0.1s;
+}
